[gd_scene load_steps=5 format=3 uid="uid://c2t3oou0lhiqv"]

[ext_resource type="Script" uid="uid://wun8mfs0l326" path="res://Scenes/player_hand_scene.gd" id="1_iqkki"]
[ext_resource type="FontFile" uid="uid://bmy0dltdp5oyx" path="res://Assets/Harmonic.ttf" id="2_62ofp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24p2e"]
bg_color = Color(0.227451, 0.227451, 0.227451, 0.596078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62ofp"]
bg_color = Color(0.129559, 0.129558, 0.129558, 0.596078)

[node name="PlayerHandScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_iqkki")

[node name="Button1" type="Button" parent="."]
layout_mode = 0
offset_left = -192.0
offset_top = -19.0
offset_right = -80.0
offset_bottom = 129.0
theme_override_fonts/font = ExtResource("2_62ofp")
theme_override_font_sizes/font_size = 20

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = -63.0
offset_top = -17.0
offset_right = 45.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("2_62ofp")
theme_override_font_sizes/font_size = 20

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = -17.0
offset_right = 167.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("2_62ofp")
theme_override_font_sizes/font_size = 20

[node name="DeckDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = -436.0
offset_top = -100.0
offset_right = -322.0
offset_bottom = 37.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62ofp")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_24p2e")
text = "Deck
5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = -100.0
offset_right = 414.0
offset_bottom = 37.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_62ofp")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_62ofp")
text = "Discard
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AtkBoostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -496.0
offset_top = 48.0
offset_right = -289.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("2_62ofp")
theme_override_font_sizes/font_size = 20
text = "ATK Boost: 0"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
